# Finance-Manager

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
src/: CMakeLists.txt  configwindow.cpp  configwindow.h  entrywizard.cpp  info.cpp  info.ui  main.cpp  mainwindow.cpp  mainwindow.css  mainwindow.h  manager.cpp  manager.h  resources.qrc  settingswindow.cpp  settingswindow.h  utils.cpp  utils.h
src/core/: CMakeLists.txt  lang.cpp  lang.h  manager.cpp
src/dialogs/: CMakeLists.txt  entrywizard.cpp  entrywizard.h  entrywizard.ui  info.cpp  info.h
src/gui/: CMakeLists.txt  configwindow.cpp  configwindow.h  configwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingswindow.h  settingswindow.ui
src/resources/: resources.qrc
src/templates/: data.json  settings.json
